--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,7 @@
 		</div>
 	</body>
 	
+	<script src="cordova.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script src="js/purchase.js"></script>
 	<script src="js/init.js"></script>
