--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Trump Clicker</title>
 		<link rel="icon" type="img/ico" href="styles/images/cursor.png">
-		<link rel='stylesheet' type='text/css' href='styling.css' />
+		<link rel='stylesheet' type='text/css' href='styles/styling.css' />
 		
 		<!--<meta name="viewport" content="user-scalable=no" />-->
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
@@ -18,11 +18,11 @@
 		</div>
 	
 		<div class="img-container map">
-			<img src="styles/images/map.png">
+			<img src="images/map.png">
 		</div>
 		
 		<div class="img-container face">
-			<img id="face" src="styles/images/trump.png">
+			<img id="face" src="images/trump.png">
 		</div>
 		
 		<div id="count-div" class="count">
@@ -33,7 +33,7 @@
 		
 		<canvas class="canvas" id="canvas"></canvas>
 		
-		<img class="shop-img" src="styles/images/shop.png">
+		<img class="shop-img" src="images/shop.png">
 		
 		<div class="shop" id="shop"></div>
 		</div>
