Open menu on icon click

--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
 			
 			<canvas class="canvas" id="canvas"></canvas>
 			
-			<img class="shop-img" src="images/shop.png">
+			<img class="shop-img" src="images/shop.png" ontouchend="slideout.open();">
 			
 			<nav id="menu">
 				<header>
