Make shop scrollable

--- a/www/index.html
+++ b/www/index.html
@@ -35,11 +35,10 @@
 			<canvas class="canvas" id="canvas"></canvas>
 			
 			<img class="shop-img" src="images/shop.png" ontouchend="slideout.open();">
-			
-			<div class="shop" id="shop"></div>
 		</div>
 		<nav id="menu" class="shop-menu">
 			<h1>Store</h1>
+			<div class="shop-container" id="shop"></div>
 			<!--
 			<div class="shop-item">
 				<img src="images/agent.png">
