--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
 				<img src="images/map.png">
 			</div>
 			
-			<div class="img-container face">
+			<div class="img-container face" id="face-div">
 				<img id="face" src="images/trump.png">
 			</div>
 			
@@ -34,7 +34,7 @@
 			
 			<canvas class="canvas" id="canvas"></canvas>
 			
-			<img class="shop-img" src="images/shop.png" ontouchend="slideout.open();">
+			<img class="shop-img" id="shop-img" src="images/shop.png" ontouchend="slideout.open();">
 		</div>
 		<nav id="menu" class="shop-menu">
 			<h1>Store</h1>
