--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,10 @@
 			<canvas class="canvas" id="canvas"></canvas>
 			
 			<img class="shop-img" id="shop-img" src="images/shop.png" ontouchend="slideout.open();">
+			<div ontouchend="watchRewardVideo();">
+				<img class="vid-img" id="vid-img" src="images/video.png">
+				<p class="vid-reward" id="vid-reward">+1000</p>
+			</div>
 		</div>
 		<nav id="menu" class="shop-menu">
 			<h1>Store</h1>
