--- a/www/index.html
+++ b/www/index.html
@@ -43,19 +43,11 @@
 		<nav id="menu" class="shop-menu">
 			<h1>Store</h1>
 			<div class="shop-container" id="shop"></div>
-			<!--
-			<div class="shop-item">
-				<img src="images/agent.png">
-				<div class="desc">
-					<p class="name">agent</p>
-					<p class="more">5 per second</p>
-					<p class="more">Cost: 100</p>
-				</div>
-				<div class="amount">
-					<p>10</p>
-				</div>
+			<div class="settings" id="settings" style="display: none;">
+				<h1>Settings</h1>
+				<p ontouchend="clearData();">Restart</p>
 			</div>
-			-->
+			<img class="settings-img" src="images/settings.png" ontouchend="toggleSettings();">
 		</nav>
 	</body>
 	
