--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@
 			</div>
 			
 			<div id="count-div" class="count">
-				<span id="count">0</span> illegals deported
+				<span id="count" style="text-decoration: none;">0</span> people deported
 				<br>
 				<span class="pers"><span id="persecond">0</span> per second | +<span id="perclick">0</span> per click</span>
 			</div>
@@ -67,7 +67,6 @@
 	<script src="js/purchase.js"></script>
 	<script src="js/init.js"></script>
 	<script src="js/main.js"></script>
-	<script src="js/touch.js"></script>
 	<script src="js/fallingface.js"></script>
 	<script src="js/person.js"></script>
 	<script src="js/agent.js"></script>
