--- a/www/index.html
+++ b/www/index.html
@@ -34,12 +34,15 @@
 			
 			<canvas class="canvas" id="canvas"></canvas>
 			
+			<div class="ad"></div>
+			
 			<img class="shop-img" id="shop-img" src="images/shop.png" ontouchend="slideout.open();">
 			<div id="reward" style="display: none;" ontouchend="watchRewardVideo();">
 				<img class="vid-img" id="vid-img" src="images/video.png">
 				<p class="vid-reward" id="vid-reward">+1000</p>
 			</div>
 		</div>
+		
 		<nav id="menu" class="shop-menu">
 			<h1>Store</h1>
 			<div class="shop-container" id="shop"></div>
@@ -66,6 +69,7 @@
 	
 	<script src="js/purchase.js"></script>
 	<script src="js/init.js"></script>
+	<script src="js/locs.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/fallingface.js"></script>
 	<script src="js/person.js"></script>
