--- a/www/index.html
+++ b/www/index.html
@@ -44,13 +44,15 @@
 		</div>
 		
 		<nav id="menu" class="shop-menu">
-			<h1>Store</h1>
-			<div class="shop-container" id="shop"></div>
-			<div class="settings" id="settings" style="display: none;">
-				<h1>Settings</h1>
-				<p ontouchend="clearData();">Restart</p>
+			<div class="no-scrollbar">
+				<h1>Store</h1>
+				<div class="shop-container" id="shop"></div>
+				<div class="settings" id="settings" style="display: none;">
+					<h1>Settings</h1>
+					<p ontouchend="clearData();">Restart</p>
+				</div>
+				<img class="settings-img" src="images/settings.png" ontouchend="toggleSettings();">
 			</div>
-			<img class="settings-img" src="images/settings.png" ontouchend="toggleSettings();">
 		</nav>
 	</body>
 	
