Remove automatic alert

--- a/www/index.html
+++ b/www/index.html
@@ -62,6 +62,7 @@
 				<div class="settings" id="settings" style="display: none;">
 					<h1>Settings</h1>
 					<p ontouchend="clearData();">Restart</p>
+					<p ontouchend="resetCount();">Reset count</p>
 				</div>
 				<img class="settings-img" src="images/settings.png" ontouchend="toggleSettings();">
 			</div>
