--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@
 			</div>
 			
 			<div id="count-div" class="count">
-				<span id="count" style="text-decoration: none;">0</span> people deported
+				<span id="count" style="text-decoration: none;color: #fff;">0</span> people deported
 				<br>
 				<span class="pers"><span id="persecond">0</span> per second | +<span id="perclick">0</span> per click</span>
 			</div>
