Resize shop icon, add test alert button

--- a/www/index.html
+++ b/www/index.html
@@ -63,6 +63,7 @@
 					<h1>Settings</h1>
 					<p ontouchend="clearData();">Restart</p>
 					<p ontouchend="resetCount();">Reset count</p>
+					<p ontouchend="showAlert('Mexico has begun showing signs of aggression against the United States. Is war eminent?');">Test alert</p>
 				</div>
 				<img class="settings-img" src="images/settings.png" ontouchend="toggleSettings();">
 			</div>
