--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,15 @@
 			
 			<canvas class="canvas" id="canvas"></canvas>
 			
-			<div class="overlay" id="overlay" onclick="exitAlert();"></div>
+			<div class="ad"></div>
+			
+			<img class="shop-img" id="shop-img" src="images/shop.png" ontouchend="slideout.open();">
+			<div id="reward" style="display: none;" ontouchend="watchRewardVideo();">
+				<img class="vid-img" id="vid-img" src="images/video.png">
+				<p class="vid-reward" id="vid-reward">+1000</p>
+			</div>
+			
+			<div class="overlay" id="overlay" ontouchend="exitAlert();"></div>
 			<div class="alert" id="alert">
 				<div class="header">
 					<img src="images/fox.png">
@@ -43,15 +51,7 @@
 				<div class="message">
 					<p id="alert-message"></p>
 				</div>
-				<div class="exit" onclick="exitAlert();">x</div>
-			</div>
-			
-			<div class="ad"></div>
-			
-			<img class="shop-img" id="shop-img" src="images/shop.png" ontouchend="slideout.open();">
-			<div id="reward" style="display: none;" ontouchend="watchRewardVideo();">
-				<img class="vid-img" id="vid-img" src="images/video.png">
-				<p class="vid-reward" id="vid-reward">+1000</p>
+				<div class="exit" ontouchend="exitAlert();">x</div>
 			</div>
 		</div>
 		
