Update reward amount

--- a/www/index.html
+++ b/www/index.html
@@ -34,12 +34,14 @@
 			
 			<canvas class="canvas" id="canvas"></canvas>
 			
-			<div class="ad"></div>
+			<div class="ad">
+				<p>Loading advertisement...</p>
+			</div>
 			
 			<img class="shop-img" id="shop-img" src="images/shop.png" ontouchend="slideout.open();">
-			<div id="reward" style="display: none;" ontouchend="watchRewardVideo();">
+			<div id="reward" ontouchend="watchRewardVideo();">
 				<img class="vid-img" id="vid-img" src="images/video.png">
-				<p class="vid-reward" id="vid-reward">+1000</p>
+				<p class="vid-reward" id="vid-reward">+1K</p>
 			</div>
 			
 			<div class="overlay" id="overlay" ontouchend="exitAlert();"></div>
