Organize functions into different files

--- a/www/index.html
+++ b/www/index.html
@@ -86,7 +86,9 @@
 	</script>
 	
 	<script src="js/purchase.js"></script>
+	<script src="js/ads.js"></script>
 	<script src="js/init.js"></script>
+	<script src="js/shop.js"></script>
 	<script src="js/locs.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/fallingface.js"></script>
