--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
 				<span id="news"></span>
 			</div>
 		
-			<div class="img-container map">
+			<div class="img-container map" style="margin-left: -10px;">
 				<img src="images/map.png">
 			</div>
 			
@@ -35,7 +35,7 @@
 			<canvas class="canvas" id="canvas"></canvas>
 			
 			<div class="ad">
-				<p>Loading advertisement...</p>
+				<img id="loading-ad" src="images/loading.gif">
 			</div>
 			
 			<img class="shop-img" id="shop-img" src="images/shop.png" ontouchend="slideout.open();">
