Show added amount on app start

--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,8 @@
 			<div class="news">
 				<span id="news"></span>
 			</div>
+			
+			<div class="added" id="added">+1543</div>
 		
 			<div class="img-container map" style="margin-left: -10px;">
 				<img src="images/map.png">
