--- a/www/index.html
+++ b/www/index.html
@@ -68,6 +68,7 @@
 					<p ontouchend="clearData();">Restart</p>
 					<p ontouchend="resetCount();">Reset count</p>
 					<p ontouchend="showAlert('Mexico has begun showing signs of aggression against the United States. Is war eminent?');">Test alert</p>
+					<p ontouchend="togglePaused();">Toggle pause</p>
 				</div>
 				<img class="settings-img" src="images/settings.png" ontouchend="toggleSettings();">
 			</div>
