--- a/www/index.html
+++ b/www/index.html
@@ -37,10 +37,11 @@
 			<canvas class="canvas" id="canvas"></canvas>
 			
 			<img class="shop-img" id="shop-img" src="images/shop.png" ontouchend="slideout.open();">
-			<div id="reward" ontouchend="watchRewardVideo();" style="display: none;">
+			<div id="reward" ontouchend="watchRewardVideo();">
 				<img class="vid-img" id="vid-img" src="images/video.png">
 				<p class="vid-reward" id="vid-reward">+1K</p>
 			</div>
+			<img class="video-loading" id="video-loading" src="images/loading.gif">
 			
 			<div class="overlay" id="overlay" ontouchend="exitAlert();"></div>
 			<div class="alert" id="alert">
