Hide video button on start

--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
 			<canvas class="canvas" id="canvas"></canvas>
 			
 			<img class="shop-img" id="shop-img" src="images/shop.png" ontouchend="slideout.open();">
-			<div id="reward" ontouchend="watchRewardVideo();">
+			<div id="reward" ontouchend="watchRewardVideo();" style="display: none;">
 				<img class="vid-img" id="vid-img" src="images/video.png">
 				<p class="vid-reward" id="vid-reward">+1K</p>
 			</div>
