--- a/www/index.html
+++ b/www/index.html
@@ -62,7 +62,7 @@
 				<div class="shop-container" id="shop"></div>
 				<div class="settings" id="settings" style="display: none;">
 					<h1>Settings</h1>
-					<p ontouchend="clearData();">Restart</p>
+					<p ontouchend="admob.banner.hide();clearData();">Restart</p>
 					<p ontouchend="resetCount();">Reset count</p>
 					<p ontouchend="showAlert('Mexico has begun showing signs of aggression against the United States. Is war eminent?');">Test alert</p>
 					<p ontouchend="togglePaused();">Toggle pause</p>
