Add new shop items and resize html

--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
 			<div id="count-div" class="count">
 				<span id="count" style="text-decoration: none;color: #fff;">0</span> people deported
 				<br>
-				<span class="pers"><span id="persecond">0</span> per second | +<span id="perclick">0</span> per click</span>
+				<span class="pers" id="pers"><span id="persecond">0</span> per second | +<span id="perclick">0</span> per click</span>
 			</div>
 			
 			<canvas class="canvas" id="canvas"></canvas>
@@ -62,7 +62,7 @@
 				<h1>Store</h1>
 				<div class="shop-container" id="shop"></div>
 				<div class="settings" id="settings" style="display: none;">
-					<h1>Settings</h1>
+					<h1 style="margin-bottom: 6px;">Settings</h1>
 					<p ontouchend="clearData();">Restart</p>
 					<p ontouchend="resetCount();">Reset count</p>
 					<p ontouchend="showAlert('Mexico has begun showing signs of aggression against the United States. Is war eminent?');">Test alert</p>
