Add function comments

--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
 				<span id="news"></span>
 			</div>
 			
-			<div class="added" id="added">+1543</div>
+			<div class="added" id="added"></div>
 		
 			<div class="img-container map" style="margin-left: -10px;">
 				<img src="images/map.png">
