Hide shop initially

--- a/www/index.html
+++ b/www/index.html
@@ -58,7 +58,7 @@
 		</div>
 		
 		<nav id="menu" class="shop-menu">
-			<div class="no-scrollbar">
+			<div class="no-scrollbar" id="shop-hide" style="display: none;">
 				<h1>Store</h1>
 				<div class="shop-container" id="shop"></div>
 				<div class="settings" id="settings" style="display: none;">
