Add rotating ray background

--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,10 @@
 	</head>
 	
 	<body onresize="resize()">
-		<div id="trumpy" style="background-color: #2280BA;box-shadow: -5px 0px 15px rgba(0, 0, 0, 0.4);">
+		<div id="trumpy" style="box-shadow: -5px 0px 15px rgba(0, 0, 0, 0.4);">
+			<div class="bg">
+				<img id="rays" src="images/rays.png">
+			</div>
 			<canvas class="canvas" id="canvas_bg"></canvas>
 			
 			<div class="news">
