--- a/www/index.html
+++ b/www/index.html
@@ -11,9 +11,30 @@
 	</head>
 	
 	<body onresize="resize()">
-		<div id="trumpy" style="box-shadow: -5px 0px 15px rgba(0, 0, 0, 0.4);">
+		<div id="trumpy" style="box-shadow: -5px 0px 15px rgba(0, 0, 0, 0.4);background-color: #2280BA;">
 			<div class="bg">
-				<img id="rays" src="images/rays.png">
+				<ul class="starbust-wheel" id="rays">
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
 			</div>
 			<canvas class="canvas" id="canvas_bg"></canvas>
 			
