Perfectly center background rays

--- a/www/index.html
+++ b/www/index.html
@@ -12,29 +12,8 @@
 	
 	<body onresize="resize()">
 		<div id="trumpy" style="box-shadow: -5px 0px 15px rgba(0, 0, 0, 0.4);background-color: #2280BA;">
-			<div class="bg">
-				<ul class="starbust-wheel" id="rays">
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ul>
+			<div class="bg" id="bg">
+				<ul class="starbust-wheel" id="rays"></ul>
 			</div>
 			<canvas class="canvas" id="canvas_bg"></canvas>
 			
