Make rays an image

--- a/www/index.html
+++ b/www/index.html
@@ -13,8 +13,9 @@
 	<body onresize="resize()">
 		<div id="trumpy" style="box-shadow: -5px 0px 15px rgba(0, 0, 0, 0.4);background-color: #2280BA;">
 			<div class="bg" id="bg">
-				<ul class="starbust-wheel" id="rays"></ul>
+				<img src="images/rays.png" id="rays">
 			</div>
+			
 			<canvas class="canvas" id="canvas_bg"></canvas>
 			
 			<div class="news">
@@ -22,7 +23,7 @@
 			</div>
 			
 			<div class="added" id="added"></div>
-		
+			
 			<div class="img-container map" style="margin-left: -10px;">
 				<img src="images/map.png">
 			</div>
