--- a/www/index.html
+++ b/www/index.html
@@ -68,7 +68,8 @@
 				<div class="settings" id="settings" style="display: none;">
 					<h1 style="margin-bottom: 6px;">Settings</h1>
 					<p ontouchend="clearData();">Restart</p>
-					<p ontouchend="resetCount();">Reset count</p>
+					<p ontouchend="setCount(0);">Reset count</p>
+					<p ontouchend="setCount(Number.MAX_SAFE_INTEGER / 20);">Infinite count</p>
 					<p ontouchend="showAlert('Mexico has begun showing signs of aggression against the United States. Is war eminent?');">Test alert</p>
 					<p ontouchend="togglePaused();">Toggle pause</p>
 				</div>
