Edit shop font and appearance

--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
 			</div>
 			
 			<div id="count-div" class="count">
-				<span id="count" style="text-decoration: none;color: #fff;">0</span> people deported
+				<span id="count" style="text-decoration: none;color: #fff;">0</span> PEOPLE DEPORTED
 				<br>
 				<span class="pers" id="pers"><span id="persecond">0</span> per second | +<span id="perclick">0</span> per click</span>
 			</div>
@@ -63,7 +63,7 @@
 		
 		<nav id="menu" class="shop-menu">
 			<div class="no-scrollbar" id="shop-hide" style="display: none;">
-				<h1>Store</h1>
+				<h1>Shop</h1>
 				<div class="shop-container" id="shop"></div>
 				<div class="settings" id="settings" style="display: none;">
 					<h1 style="margin-bottom: 6px;">Settings</h1>
