--- a/www/index.html
+++ b/www/index.html
@@ -72,6 +72,7 @@
 					<p ontouchend="setCount(Number.MAX_SAFE_INTEGER / 20);">Infinite count</p>
 					<p ontouchend="showAlert('Mexico has begun showing signs of aggression against the United States. Is war eminent?');">Test alert</p>
 					<p ontouchend="togglePaused();">Toggle pause</p>
+					<div class="text">Per second: <span id="true-persecond">1300</span></div>
 				</div>
 				<img class="settings-img" src="images/settings.png" ontouchend="toggleSettings();">
 			</div>
