--- a/www/index.html
+++ b/www/index.html
@@ -80,9 +80,10 @@
 	</body>
 	
 	<script src="cordova.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script src="lib/jquery.js"></script>
+	<script src="lib/howler.js"></script>
 	
-	<script src="js/slideout.min.js"></script>
+	<script src="lib/slideout.min.js"></script>
 	<script>
 		var slideout = new Slideout({
 			'panel': document.getElementById('trumpy'),
