--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
 			</div>
 			
 			<div id="count-div" class="count">
-				<span id="count" style="text-decoration: none;color: #fff;">0</span> PEOPLE DEPORTED
+				<span id="count" class="num">0</span> PEOPLE DEPORTED
 				<br>
 				<span class="pers" id="pers"><span id="persecond">0</span> per second | +<span id="perclick">0</span> per click</span>
 			</div>
