Only play touch sound when settings manually toggled

--- a/www/index.html
+++ b/www/index.html
@@ -74,7 +74,7 @@
 					<p ontouchend="togglePaused();">Toggle pause</p>
 					<div class="text">Per second: <span id="true-persecond">1300</span></div>
 				</div>
-				<img class="settings-img" src="images/settings.png" ontouchend="toggleSettings();">
+				<img class="settings-img" src="images/settings.png" ontouchend="toggleSettings(true);">
 			</div>
 		</nav>
 	</body>
