Split up init.js to appropriate files

--- a/www/index.html
+++ b/www/index.html
@@ -93,9 +93,11 @@
 		});
 	</script>
 	
+	<script src="js/global.js"></script>
 	<script src="js/purchase.js"></script>
 	<script src="js/ads.js"></script>
 	<script src="js/sounds.js"></script>
+	<script src="js/utils.js"></script>
 	<script src="js/init.js"></script>
 	<script src="js/shop.js"></script>
 	<script src="js/locs.js"></script>
