Add shop descriptions and add detention centers

--- a/www/index.html
+++ b/www/index.html
@@ -63,8 +63,10 @@
 		
 		<nav id="menu" class="shop-menu">
 			<div class="no-scrollbar" id="shop-hide" style="display: none;">
-				<h1>Shop</h1>
-				<div class="shop-container" id="shop"></div>
+				<h1>Upgrades</h1>
+				<div class="shop-container" id="upgrades"></div>
+				<h1>Deporters</h1>
+				<div class="shop-container" id="deporters"></div>
 				<div class="settings" id="settings" style="display: none;">
 					<h1 style="margin-bottom: 6px;">Settings</h1>
 					<p ontouchend="clearData();">Restart</p>
