Hide about when not showing and make about image larger

--- a/www/index.html
+++ b/www/index.html
@@ -65,7 +65,7 @@
 			<div class="no-scrollbar" id="shop-hide" style="display: none;">
 				<h1>Upgrades</h1>
 				<div class="shop-container" id="upgrades"></div>
-				<h1>Deporters</h1>
+				<h1>Workers</h1>
 				<div class="shop-container" id="deporters"></div>
 				<div class="settings" id="settings" style="display: none;">
 					<h1 style="margin-bottom: 6px;">Settings</h1>
