Add debug system

--- a/www/index.html
+++ b/www/index.html
@@ -59,6 +59,10 @@
 				</div>
 				<div class="exit" ontouchend="exitAlert();">x</div>
 			</div>
+			
+			<div class="debug" id="debug-div">
+				<p id="debug"></p>
+			</div>
 		</div>
 		
 		<nav id="menu" class="shop-menu">
