Modify shop appearance, add open sound

--- a/www/index.html
+++ b/www/index.html
@@ -63,13 +63,15 @@
 			<div class="debug" id="debug-div">
 				<p id="debug"></p>
 			</div>
+			
+			<img class="ad" id="ad" src="images/ad.png">
 		</div>
 		
 		<nav id="menu" class="shop-menu">
 			<div class="no-scrollbar" id="shop-hide" style="display: none;">
 				<h1>Upgrades</h1>
 				<div class="shop-container" id="upgrades"></div>
-				<h1>Workers</h1>
+				<h1 style="margin-top: 30px;">Workers</h1>
 				<div class="shop-container" id="deporters"></div>
 				<div class="settings" id="settings" style="display: none;">
 					<h1 style="margin-bottom: 6px;">Settings</h1>
@@ -78,7 +80,6 @@
 					<p ontouchend="setCount(Number.MAX_SAFE_INTEGER / 20);">Infinite count</p>
 					<p ontouchend="showAlert('Mexico has begun showing signs of aggression against the United States. Is war eminent?');">Test alert</p>
 					<p ontouchend="togglePaused();">Toggle pause</p>
-					<div class="text">Per second: <span id="true-persecond">1300</span></div>
 				</div>
 				<img class="settings-img" src="images/settings.png" ontouchend="toggleSettings(true);">
 			</div>
