Add to detention centers on pause

--- a/www/index.html
+++ b/www/index.html
@@ -85,6 +85,7 @@
 					<p ontouchend="setCount(Number.MAX_SAFE_INTEGER / 20);">Infinite count</p>
 					<p ontouchend="showAlert('Mexico has begun showing signs of aggression against the United States. Is war eminent?');">Test alert</p>
 					<p ontouchend="togglePaused();">Toggle pause</p>
+					<p ontouchend="saveData();">Save data</p>
 				</div>
 				<img class="settings-img" src="images/settings.png" ontouchend="toggleSettings(true);">
 			</div>
