Update shop icons

--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Trump Clicker</title>
-		<link rel="icon" type="img/ico" href="styles/images/cursor.png">
+		<link rel="icon" type="img/ico" href="images/cursor.png">
 		<link rel='stylesheet' type='text/css' href='styles/styling.css' />
 		
 		<!--<meta name="viewport" content="user-scalable=no" />-->
