--- a/www/index.html
+++ b/www/index.html
@@ -92,6 +92,8 @@
 					<p ontouchend="showAlert('Mexico has begun showing signs of aggression against the United States. Is war eminent?');">Test alert</p>
 					<p ontouchend="togglePaused();">Toggle pause</p>
 					<p ontouchend="saveData();">Save data</p>
+                    <input id="custom-deported"  type="text" placeholder="Set deported">
+                    <p ontouchend="setCustomDeported();" style="width: 53px;display: inline-block;margin-left: 0px;margin-top: -5;height:29;">Set</p>
 				</div>
 				<img class="settings-img" src="images/settings.png" ontouchend="toggleSettings(true);">
 			</div>
