Show loading animation when opening video

--- a/www/index.html
+++ b/www/index.html
@@ -69,7 +69,7 @@
 		
 		<nav id="menu" class="shop-menu">
 			<div class="no-scrollbar" id="shop-hide" style="display: none;">
-                <div id="reward" style="display: none;">
+                <div id="reward" style="display: none;margin-bottom: 30px;">
                     <h1>Rewards</h1>
                     <div class="shop-container" id="rewards">
                         <div class="shop-item" id="video" ontouchstart="attemptAction(event)" ontouchend="doAction(event, this.id, watchRewardVideo)">
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                 </div>
-				<h1 style="margin-top: 30px;">Upgrades</h1>
+				<h1>Upgrades</h1>
 				<div class="shop-container" id="upgrades"></div>
 				<div class="center-collect" id="center-collect-div" ontouchend="emptyDetentionCenters();">
 					<p class="text">Deport <span id="center-collect"></span> illegals</p>
