--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="white" />
+        <meta http-equiv="Content-Security-Policy">
 	</head>
 	
 	<body onresize="resize()">
