--- a/www/index.html
+++ b/www/index.html
@@ -100,13 +100,15 @@
 				<div class="settings" id="settings" style="display: none;">
 					<h1 style="margin-bottom: 6px;">Settings</h1>
 					<p ontouchend="clearData();">Restart</p>
+                    <p ontouchend="saveData();">Force save</p>
+                    <!--
 					<p ontouchend="setCount(0);updateObscuredItems();">Reset count</p>
 					<p ontouchend="setCount(Number.MAX_SAFE_INTEGER / 20);updateObscuredItems();">Infinite count</p>
 					<p ontouchend="showAlert('Mexico has begun showing signs of aggression against the United States. Is war eminent?');">Test alert</p>
 					<p ontouchend="togglePaused();">Toggle pause</p>
-					<p ontouchend="saveData();">Save data</p>
                     <input id="custom-deported"  type="text" placeholder="Set deported">
                     <p ontouchend="setCustomDeported();" style="width: 53px;display: inline-block;margin-left: 0px;margin-top: -5;height:29;">Set</p>
+                    -->
 				</div>
 				<img class="settings-img" src="images/settings.png" ontouchend="toggleSettings(true);">
 			</div>
