--- a/www/index.html
+++ b/www/index.html
@@ -102,7 +102,8 @@
 					<p ontouchend="clearData();">Restart</p>
                     <p ontouchend="saveData();">Force save</p>
                     <!--
-					<p ontouchend="setCount(0);updateObscuredItems();">Reset count</p>
+                    <p ontouchend="setCount(0);updateObscuredItems();">Set count to 0</p>
+					<p ontouchend="setCount(1000);updateObscuredItems();">Set count to 1000</p>
 					<p ontouchend="setCount(Number.MAX_SAFE_INTEGER / 20);updateObscuredItems();">Infinite count</p>
 					<p ontouchend="showAlert('Mexico has begun showing signs of aggression against the United States. Is war eminent?');">Test alert</p>
 					<p ontouchend="togglePaused();">Toggle pause</p>
