--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
 			</div>
 			
 			<div id="count-div" class="count">
-				<span id="count" class="num">0</span> ILLEGALS DEPORTED
+				<span id="count" class="num">0</span>
 				<br>
 				<span class="pers" id="pers"><span id="persecond">0</span> per second | +<span id="perclick">0</span> per click</span>
 			</div>
