Improve iPad support

--- a/www/index.html
+++ b/www/index.html
@@ -102,6 +102,7 @@
 					<p ontouchend="clearData();">Restart</p>
                     <p ontouchend="saveData();">Force save</p>
                     <!--
+                    <p ontouchend="showAdded(1045345345);">Show added</p>
                     <p ontouchend="setCount(0);updateObscuredItems();">Set count to 0</p>
 					<p ontouchend="setCount(1000);updateObscuredItems();">Set count to 1000</p>
 					<p ontouchend="setCount(Number.MAX_SAFE_INTEGER / 20);updateObscuredItems();">Infinite count</p>
@@ -130,6 +131,7 @@
 		});
 	</script>
 	
+    <script src="js/mobile.js"></script>
 	<script src="js/purchase.js"></script>
 	<script src="js/global.js"></script>
 	<script src="js/ads.js"></script>
