--- a/www/index.html
+++ b/www/index.html
@@ -103,6 +103,7 @@
                     <p ontouchend="saveData();">Force save</p>
                     <!--
                     <p ontouchend="showAdded(1045345345);">Show added</p>
+                    <p ontouchend="faces = new Array();">Clear faces</p>
                     <p ontouchend="setCount(0);updateObscuredItems();">Set count to 0</p>
 					<p ontouchend="setCount(1000);updateObscuredItems();">Set count to 1000</p>
 					<p ontouchend="setCount(Number.MAX_SAFE_INTEGER / 20);updateObscuredItems();">Infinite count</p>
