--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,9 @@
 				<img src="images/rays.png" id="rays">
 			</div>
 			
-			<canvas class="canvas" id="canvas_bg"></canvas>
+            <div class="canvas-container">
+                <canvas class="canvas" id="canvas_bg"></canvas>
+            </div>
 			
 			<div class="news">
 				<span id="news"></span>
@@ -25,7 +27,7 @@
 			
 			<div class="added" id="added"></div>
 			
-			<div class="img-container map" style="margin-left: -10px;">
+			<div class="img-container map" style="margin-left: -5px;">
 				<img src="images/map.png">
 			</div>
 			
@@ -40,10 +42,10 @@
 			</div>
 			
             <div class="canvas-container">
-                <canvas class="canvas" id="canvas"></canvas>
+                <canvas class="canvas" id="canvas" style="margin-left: -5px;"></canvas>
             </div>
             <div class="canvas-container">
-                <canvas class="canvas" id="canvas_agents"></canvas>
+                <canvas class="canvas" id="canvas_agents" style="margin-left: -5px;"></canvas>
             </div>
 			
 			<img class="shop-img" id="shop-img" src="images/shop.png" ontouchend="openShop();">
