--- a/www/index.html
+++ b/www/index.html
@@ -151,4 +151,5 @@
 	<script src="js/fallingface.js"></script>
 	<script src="js/person.js"></script>
 	<script src="js/agent.js"></script>
+    <script src="js/boat.js"></script>
 </html>
